--- a/package.json
+++ b/package.json
@@ -1,10 +1,62 @@
 {
+  "name": "telegram-services-bot",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "format": "prettier . --write"
+    "build": "tsup src/dev.ts --format esm --dts --clean --out-dir dist",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "tsx scripts/seed.ts",
+    "db:studio": "drizzle-kit studio",
+    "dev": "tsx watch src/dev.ts",
+    "format": "prettier . --write",
+    "lint": "eslint .",
+    "set:webhook": "tsx scripts/set-webhook.ts",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@grammyjs/conversations": "^2.1.0",
+    "@grammyjs/i18n": "^1.1.2",
+    "@grammyjs/menu": "^1.3.1",
+    "@neondatabase/serverless": "^1.0.1",
+    "@sentry/node": "^10.22.0",
+    "@upstash/qstash": "^2.8.2",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "drizzle-orm": "^0.44.7",
+    "grammy": "^1.38.4",
+    "pino": "^10.1.0",
+    "ws": "^8.19.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.3",
+    "@types/node": "^25.3.0",
+    "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@vercel/node": "^5.3.24",
+    "@vitest/coverage-v8": "^4.0.7",
+    "dotenv-cli": "^10.0.0",
+    "drizzle-kit": "^0.31.7",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
-    "prettier-plugin-packagejson": "3.0.0"
+    "prettier-plugin-packagejson": "3.0.0",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.1",
+    "vitest": "^4.0.7"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
