--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "tsx watch src/dev.ts",
     "format": "prettier . --write",
     "lint": "eslint .",
+    "ops:readiness": "tsx scripts/validate-readiness.ts",
     "set:webhook": "tsx scripts/set-webhook.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
