fix(deploy): harden env and migration/webhook setup defaults
- prefer `DATABASE_URL_UNPOOLED` (fallback to `DATABASE_URL`) in `drizzle.config.ts`
- add `DATABASE_URL_UNPOOLED` to `.env.example`
- load `.env` automatically for `pnpm set:webhook`
- treat empty optional env vars as unset (`SENTRY_DSN`, `INTERNAL_WEBHOOK_SETUP_TOKEN`)
- make readiness Sentry check non-failing when Sentry is disabled
- update deployment checklist wording for optional Sentry
- add unit tests for empty optional env handling

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PRICE_UNIT=dollar
 CARD_NUMBER=
 REFERRAL_PERCENT=10
 DATABASE_URL=
+DATABASE_URL_UNPOOLED=
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 QSTASH_TOKEN=
