--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "tsx watch src/dev.ts",
     "format": "prettier . --write",
     "lint": "eslint .",
-    "ops:readiness": "tsx scripts/validate-readiness.ts",
+    "ops:readiness": "tsx --env-file-if-exists=.env scripts/validate-readiness.ts",
     "set:webhook": "tsx --env-file-if-exists=.env scripts/set-webhook.ts",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
